--- a/piano.html
+++ b/piano.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="piano.css">
+</head>
 <body>
+
+<h1 name="score">Score:</h1>
+<h2 id="wrong">Wrong: <var id="wrongVar">0</var></h2>
+<h2 id="right">Right: <var id="rightVar">0</var></h2>
 
 <canvas id="myCanvas" width="500" height="200"
 style="border:1px solid #c3c3c3;">
