Testing css header formats

--- a/piano.html
+++ b/piano.html
@@ -4,6 +4,13 @@
 <link rel="stylesheet" href="piano.css">
 </head>
 <body>
+<div 
+	id="pageTop"
+	class="bar"
+>
+<p> text</p>
+<P> text</P>
+</div>
 
 <h1 name="score">Score:</h1>
 <h2 id="wrong">Wrong: <var id="wrongVar">0</var></h2>
